<resources>
    <string name="app_name">Forum App</string>
    <string name="latest_posts">Latest</string>
    <string name="popular_posts">Popular</string>
    <string name="latest_comments">Latest</string>
    <string name="popular_comments">Popular</string>

    <string name="empty_post_list">No posts to show</string>
    <string name="empty_comment_list">No comments yet</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_my_comments">My comments</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="write_something">Message</string>
    <string name="pick_a_name">Pick a name</string>
    <string name="name_restrictions">(letters, numbers, and underscore)</string>
    <string name="login_text">Log in if you like:</string>
    <string name="skip_login_text">&#8230;or continue without login:</string>

    <string name="done">Done</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="name_taken">Name already taken</string>
    <string name="error_user">Error retrieving user</string>

    <string name="action_messages">Messages</string>
    <string name="action_settings">Settings</string>

    <string name="from_you">From you</string>
    <string name="to_you">To you</string>

    <string name="shared_preferences_file_name">shared_preferences_file_name</string>

    <string name="channel_id">reply_notifications</string>
    <string name="channel_name">Reply notifications</string>
    <string name="channel_description">Receive notifications of replies to your messages</string>

    <string name="user_name">User name</string>
    <string name="error_in_login">Error in login</string>
    <string name="account_merging_not_supported">Account merging is not currently supported. To login as an authenticated user you will have to logout first.</string>
    <string name="save_account_info">Don\'t lose access to your account!</string>
    <string name="save_account">Secure account</string>
    <string name="account_saved">Account secured</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="skip_login">Skip login</string>
    <string name="logout">Log out</string>

    <string name="really_log_out">Do you really want to log out?</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_your_name">Type your name</string>

    <string name="terms_of_use">By clicking "Enter" I agree that I have read and accepted the <a href="https://storage.googleapis.com/public_furum_app/terms_of_use.html">Terms of Use</a>.</string>
    <string name="enter">Enter</string>
    <string name="action_link">Jump to news article</string>
    <string name="action_report">Report comment</string>

    <string name="reporting_enabled">Comment report</string>
    <string name="reporting_enabled_info">Now click a comment to report it</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="comment_reported">Comment reported</string>
    <string name="reporting_comment">Comment report</string>
    <string name="reporting_comment_info">Are you sure you want to report this comment?</string>
</resources>