<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:id="@+id/login_or_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="42dp">
            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/login_text"/>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="#fff"
                android:text="@string/login"
                />

            <TextView
                android:id="@+id/skip_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="42dp"
                android:text="@string/skip_login_text"/>

            <Button
                android:id="@+id/skip_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="#fff"
                android:text="@string/skip_login"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center">
            <TextView
                android:id="@+id/just_create_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_name"
                />
            <TextView
                android:id="@+id/just_create_user2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/name_restrictions"
                />
            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text=""
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890_"
                android:maxLines="1"
                android:hint="@string/type_your_name"
                android:maxLength="24"
                />
            <ProgressBar
                android:id="@+id/wait"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="#fff"
                android:text="@string/enter"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>