<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ForumApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name not set"
            android:textSize="26sp"
            android:textColor="#777"
            android:layout_marginBottom="42dp"
            />

        <LinearLayout
            android:id="@+id/save_account_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#777"
                android:gravity="center"
                android:text="@string/save_account_info"/>

            <Button
                android:id="@+id/save_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textColor="#fff"
                android:text="@string/save_account"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/account_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_saved"
            android:textColor="#777"
            android:drawableTint="#777"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="8dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:minWidth="200dp"
            android:textColor="#fff"
            android:text="@string/logout"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>